--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.8.2",
     "@astrojs/starlight": "^0.25.1",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.8.2",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
   }
 }
